--- a/index.html
+++ b/index.html
@@ -38,7 +38,14 @@
         <button id="playButton" type="button">Play</button>
         <button id="pauseButton" type="button" disabled>Pause</button>
         <button id="resetButton" type="button">Reset</button>
-        <button id="openOutputButton" type="button">Open Output</button>
+        <button
+          id="openOutputButton"
+          type="button"
+          aria-controls="outputOverlay"
+          aria-expanded="false"
+        >
+          Full Screen Output
+        </button>
       </div>
     </section>
 
@@ -84,7 +91,9 @@
         <input id="outputFontSize" type="range" min="18" max="80" value="40" />
         <span id="outputFontSizeValue">40 px</span>
       </div>
-      <button id="closeOutputButton" class="output-close" type="button">Close</button>
+      <button id="closeOutputButton" class="output-close" type="button">
+        Back to Options
+      </button>
     </div>
     <div id="outputTeleprompter" class="teleprompter output-teleprompter">
       <div id="outputTeleprompterContent" class="teleprompter-content"></div>
