--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Teleprompter</title>
+  <title>AltTeleprompter</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <div class="app">
     <header>
-      <h1>Teleprompter Studio</h1>
+      <h1>AltTeleprompter Studio</h1>
       <p>Enter formatted text, then press play to scroll it smoothly.</p>
     </header>
 
