Add voice-paced scroll control

--- a/index.html
+++ b/index.html
@@ -47,6 +47,16 @@
           Full Screen Output
         </button>
       </div>
+      <div class="control-group voice-group">
+        <label for="voiceToggleButton">Voice pace control</label>
+        <button id="voiceToggleButton" type="button" class="secondary">
+          Enable Mic
+        </button>
+        <span id="voiceStatus" class="voice-status off">Off</span>
+        <p class="voice-hint">
+          Uses on-device speech recognition to match your speaking tempo.
+        </p>
+      </div>
     </section>
 
     <section class="editor">
