--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
           <div><strong>Bold</strong>, <em>italic</em>, and <u>underlined</u> text is supported.</div>
           <div>Use line breaks to pace your delivery.</div>
           <div>Use the mirror toggles for reflective setups.</div>
+          <div>Adjust speed and text size to your preference.</div>
+          <div>Enable voice pace control to sync with your speaking tempo.</div>
         </div>
         <p class="hint">Tip: Use Enter for a new line. Formatting shortcuts (Ctrl/Cmd + B/I/U) work here.</p>
       </div>
