--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="app">
     <header>
       <h1>AltTeleprompter Studio</h1>
-      <p>Enter formatted text, then press play to scroll it smoothly.</p>
+      <p>Enter text, then press play to scroll it smoothly.</p>
     </header>
 
     <section class="controls">
@@ -68,8 +68,8 @@
           contenteditable="true"
           spellcheck="true"
         >
-          <div>Welcome to your teleprompter.</div>
-          <div><strong>Bold</strong>, <em>italic</em>, and <u>underlined</u> text is supported.</div>
+          <div>Welcome to AltTeleprompter.</div>
+          
           <div>Use line breaks to pace your delivery.</div>
           <div>Use the mirror toggles for reflective setups.</div>
           <div>Adjust speed and text size to your preference.</div>
