--- a/index.html
+++ b/index.html
@@ -68,12 +68,13 @@
           contenteditable="true"
           spellcheck="true"
         >
-          <div>Welcome to AltTeleprompter.</div>
+          <div>Welcome to <strong class="underline">AltTeleprompter</strong>.</div>
           
-          <div>Use line breaks to pace your delivery.</div>
-          <div>Use the mirror toggles for reflective setups.</div>
-          <div>Adjust speed and text size to your preference.</div>
-          <div>Enable voice pace control to sync with your speaking tempo.</div>
+          <div>Use <em>line breaks</em> to pace your delivery.</div>
+          <div>Use the <strong>mirror toggles</strong> for reflective setups.</div>
+          <div>Adjust <em>speed and text</em> size to your preference.</div>
+          <div>Use <strong>alternating line colors</strong> for better readability.</div>
+          <div>Enable <span class="underline">voice pace control</span> to sync with your speaking tempo.</div>
         </div>
         <p class="hint">Tip: Use Enter for a new line. Formatting shortcuts (Ctrl/Cmd + B/I/U) work here.</p>
       </div>
